[package]
name = "bisync"
description = "write async-generic code"
license = "MIT OR Apache-2.0"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/JM4ier/bisync"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bisync_macros = "0.2.0"
